--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Je suis en bts sio option SISR</p>
-                <p class="masthead-subheading font-weight-light mb-0">Je compte poursuivre mes études en lissance</p>
+                <p class="masthead-subheading font-weight-light mb-0">Je compte poursuivre mes études en licence</p>
             </div>
         </header>
         <!-- Portfolio Section-->
