--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                                     <!-- Portfolio Modal - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Travailler en mode projet</h2>
                                     <!-- Icon Divider-->
-                                    <div class="divider-custom">
+                                    <div class="divider-custom text-center">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
