--- a/index.html
+++ b/index.html
@@ -290,7 +290,9 @@
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
-                                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://docs.google.com/document/d/140sPXw0HwPKAsYozIG292arNL6PnNMePYUQW_ixCKT0/edit?usp=sharing"
+                                       <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://docs.google.com/document/d/140sPXw0HwPKAsYozIG292arNL6PnNMePYUQW_ixCKT0/edit?usp=sharing"
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
