--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                                     <p class="GLPI" /p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        <p> Close Window </p>
                                     </button>
                                 </div>
                             </div>
