--- a/index.html
+++ b/index.html
@@ -292,12 +292,12 @@
                                         <div class="divider-custom-line"></div>
                                        <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://docs.google.com/document/d/140sPXw0HwPKAsYozIG292arNL6PnNMePYUQW_ixCKT0/edit?usp=sharing"
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://docs.google.com/document/d/140sPXw0HwPKAsYozIG292arNL6PnNMePYUQW_ixCKT0/edit?usp=sharing">
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="GLPI" /p>
+                                    <p class="glpi" /p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         <p> Close Window </p>
