--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                         <div class="divider-custom-line"></div>
                                        <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <a href="https://docs.google.com/document/d/140sPXw0HwPKAsYozIG292arNL6PnNMePYUQW_ixCKT0/edit?usp=sharing"> glpi <a/>
+                        <a href="https://docs.google.com/document/d/140sPXw0HwPKAsYozIG292arNL6PnNMePYUQW_ixCKT0/edit?usp=sharing"> "glpi" <a/>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <!-- Portfolio Modal - Text-->
