--- a/index.html
+++ b/index.html
@@ -291,8 +291,9 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                        <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <a href="https://docs.google.com/document/d/140sPXw0HwPKAsYozIG292arNL6PnNMePYUQW_ixCKT0/edit?usp=sharing"> "glpi" </a>
+                                           <ul>
+                                               <li><a href="https://docs.google.com/document/d/140sPXw0HwPKAsYozIG292arNL6PnNMePYUQW_ixCKT0/edit?usp=sharing">glpi</a></li>
+                                           </ul>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <!-- Portfolio Modal - Text-->
